fix: pagination arrows hidden on mobile devices

--- a/src/containers/Home/components/CaseStudies/components/Item/Item.module.scss
+++ b/src/containers/Home/components/CaseStudies/components/Item/Item.module.scss
@@ -3,7 +3,8 @@
 .container {
   display: flex;
   gap: 122px;
-  @media (max-width: 768px) {
+  margin: 0 1rem;
+  @media (max-width: 1200px) {
     flex-direction: column;
     gap: 1rem;
   }
@@ -56,13 +57,10 @@
     display: block;
     border-radius: 20px;
   }
-  @media (max-width: 768px) {
-    height: fit-content;
-  }
 
   img {
     height: 434px;
-    @media (max-width: 768px) {
+    @media (max-width: 1200px) {
       width: 100%;
       height: 100%;
     }
